--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
 
 
 
-
+<script>
+    
+</script>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
